CHORE: correct RC text only row gap. (#1405)

--- a/aemedge/blocks/resource-center/resource-center.css
+++ b/aemedge/blocks/resource-center/resource-center.css
@@ -32,6 +32,10 @@
       row-gap: var(--udexSpacer40);
     }
   }
+
+  &.text-only ul {
+    row-gap: var(--udexSpacer16);
+  }
 }
 
 @media (width >= 640px) {
